--- a/portfolio/src/components/Header.css
+++ b/portfolio/src/components/Header.css
@@ -13,10 +13,15 @@
 
 .navbar {
     display: flex;
-    gap: 2rem;
+    gap: 2.5rem;
 }
 
 .navbar a {
     text-decoration: none;
-    color: #696969
+    color: #696969;
+    transition: 0.4s;
 }
+
+.navbar a:hover {
+    color: black;
+} 
