--- a/portfolio/src/components/Technologies.css
+++ b/portfolio/src/components/Technologies.css
@@ -21,6 +21,7 @@
     width: 600px;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 3rem;
 }
 
 .row {
@@ -29,7 +30,7 @@
 }
 
 .ability {
-    border: 1px solid #ccc;
+    border: 1px solid #d6d4d4;
     padding: 0.8rem 1.5rem;
     margin-right: 1.3rem;
     margin-bottom: 1rem;
@@ -46,7 +47,7 @@
 .ability:hover {
     transform: scale(1.3);
     z-index: 2;
-}
+} 
 
 .ability-icon {
     width: 70px;
