--- a/portfolio/src/components/Projects.css
+++ b/portfolio/src/components/Projects.css
@@ -22,6 +22,7 @@
     border: 1px solid #ccc;
     position: relative;
     padding: 1rem;
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
 }
 
 .card:hover .card-body {
@@ -30,7 +31,7 @@
 
 .card-img {
     width: 100%;
-    height: 100%;
+    height: 95%;
     object-fit: cover;
     border-radius: 15px;
 }
@@ -54,14 +55,8 @@
 
 .card-title {
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 500;
-}
-
-.card-sub-title {
-    text-transform: capitalize;
-    font-size: 14px;
-    font-weight: 300;
 }
 
 .card-info {
@@ -81,4 +76,34 @@
     border: none;
     outline: none;
     font-weight: 500;
+}
+
+.mac-btns {
+    display: flex;
+    margin-bottom: 0.7rem;
+    margin-left: 0.4rem;
+    gap: 0.6rem;
+}
+
+.red, .yellow, .green {
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: red;
+}
+
+.yellow {
+    background-color: rgb(243, 243, 4);
+}
+
+.green {
+    background-color: green;
+}
+
+.project-icons img {
+    width: 50px;
+    height: 50px;
 }
