--- a/portfolio/src/components/Header.css
+++ b/portfolio/src/components/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     padding: 1.4rem 1rem;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .header img {
@@ -13,6 +13,7 @@
 .navbar {
     display: flex;
     gap: 2.5rem;
+    margin: 0 13rem;
 }
 
 .navbar a {
@@ -23,4 +24,4 @@
 
 .navbar a:hover {
     color: black;
-} 
+}
